//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  subscriptions Subscription [not null]
}

Table Category {
  id Int [pk, increment]
  name String [unique, not null]
  services Service [not null]
}

Table Service {
  id Int [pk, increment]
  name String [unique, not null]
  logoUrl String [not null]
  brandColor String [not null]
  subscriptions Subscription [not null]
  categoryId Int [not null]
  category Category [not null]
}

Table Subscription {
  id Int [pk, increment]
  price Float [not null]
  renewalDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  serviceId Int [not null]
  service Service [not null]
  userId Int [not null]
  user User [not null]
}

Ref: Service.categoryId > Category.id

Ref: Subscription.serviceId > Service.id

Ref: Subscription.userId > User.id